k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
  label:
    role: api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api-pod
  template:
    metadata:
      labels:
        app: api-pod
    spec:
      containers:
        - name: api-pod-con
          image: manasss0508/ingress-demo-image:latest
          ports:
            containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-deployment
  label:
    role: user
spec:
  replicas: 2
  selector:
    matchLabels:
      app: user-pod
  template:
    metadata:
      labels:
        app: user-pod
    spec:
      containers:
        - name: user-pod-con
          image: manasss0508/ingress-demo-image:latest
          ports:
            containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-deployment
  label:
    role: admin
spec:
  replicas: 2
  selector:
    matchLabels:
      app: admin-pod
  template:
    metadata:
      labels:
        app: admin-pod
    spec:
      containers:
        - name: api-pod-con
          image: manasss0508/ingress-demo-image:latest
          ports:
            containerPort: 80
