k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  type: ClusterIP
  selector:
    app: api-pod
  ports:
    - port: 80
      targetPort: 30007
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
spec:
  type: ClusterIP
  selector:
    app: user-pod
  ports:
    - port: 80
      targetPort: 30008
---
apiVersion: v1
kind: Service
metadata:
  name: admin-service
spec:
  type: ClusterIP
  selector:
    app: admin-pod
  ports:
    - port: 80
      targetPort: 30009
---
